--- a/frontend/home.html
+++ b/frontend/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="sty.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -23,6 +23,14 @@
         </form>
     </div>
 
+    <div id="add_film">
+        <a href="add_film.html" class="admin-link">Add new film</a>
+    </div>
+
+    <div id="users_list">
+        <a href="users_list.html" class="admin-link">All users page</a>
+    </div>
+
     <div id="tags"></div>
 
     <main id="main"></main>
@@ -34,7 +42,8 @@
 
     </div>
 
-    <script src="scr.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/home.js"></script>
     
 </body>
 </html>
