--- a/frontend/home.html
+++ b/frontend/home.html
@@ -44,6 +44,7 @@
 
     <script src="js/api.js"></script>
     <script src="js/home.js"></script>
+    <script src="js/utils.js"></script>
     
 </body>
 </html>
