frontend_comment_add

--- a/frontend/add_film.html
+++ b/frontend/add_film.html
@@ -35,7 +35,7 @@
                     <input type="text" placeholder="Ganre ID" id="movie_ganre_id">
                     <input type="text" placeholder="Actors" id="movie_actors">
                     <input type="text" placeholder="Overview" id="movie_overview">
-                    <input type="submit" value="Add film" onclick="()=> console.log('smth')">
+                    <input type="submit" value="Add film">
                 </form>
             </div>
         </div>
