frontend_user_list_visual

--- a/frontend/users_list.html
+++ b/frontend/users_list.html
@@ -24,7 +24,35 @@
         <div class="user-panel">
             <div class="user-info">
                 <h3>All Users List</h3>
-
+                <div class="user-table">
+                    <table class="users-table">
+                        <thead>
+                            <tr>
+                                <th>User ID</th>
+                                <th>User name</th>
+                                <th>User email</th>
+                                <th>Current status</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>User1</td>
+                                <td>email1@gmail.com</td>
+                                <td>Blocked</td>
+                                <td><button class="user-action-btn">Unblock</button></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>User2</td>
+                                <td>email2@gmail.com</td>
+                                <td>Active</td>
+                                <td><button class="user-action-btn">Block</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
