logo_image_update

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="img/logo.png" class="logo" alt="">
+        <img src='https://i.postimg.cc/W4wxQkBb/logo.png' class="logo" alt='logo'/>
         <div class="join-box">
             <p class="join-msg">Watch movies without limits</p>
             <button class="btn join-btn">Join now</button>
