--- a/frontend/add_film.html
+++ b/frontend/add_film.html
@@ -31,8 +31,17 @@
                     <input type="text" placeholder="Rating" id="movie_rating">
                     <input type="text" placeholder="Vote count" id="movie_vote_count">
                     <input type="text" placeholder="Age limitation" id="movie_age_limitation">
-                    <input type="text" placeholder="Year ID" id="movie_year_id">
-                    <input type="text" placeholder="Ganre ID" id="movie_ganre_id">
+                    <select id="movie_year" required> 
+                        <option value="year">Select year</option>
+                        <option value="2021">2021</option>
+                        <option value="2020">2020</option>
+                        <option value="2019">2019</option>
+                        <option value="2018">2018</option>
+                        <option value="2017">2017</option>
+                    </select> 
+                    <select id="movie_ganre" required> 
+                        <option value="ganre">Select ganre</option>
+                    </select>
                     <input type="text" placeholder="Actors" id="movie_actors">
                     <input type="text" placeholder="Overview" id="movie_overview">
                     <input type="submit" value="Add film" onclick="()=> console.log('smth')">
