select_add_ganre

--- a/frontend/film.html
+++ b/frontend/film.html
@@ -74,13 +74,8 @@
                     <input type="submit" value="Send comment">
                 </form>
             </div> 
-            <div class="old-comment">
+            <div class="old-comment" id="allComments">
                 <div class="some-comment" id="1">
-                    <p class="username"><span>Username:</span>NameOne</p>
-                    <p class="comment-descr">Gdvsvnsoui svnjsvosvn svnsovnosv svnsovnisvn svnosivnsoivnsov sdvsv svsvinonvsd vsdnoidsfv dfbvdsf dsfbsdb sdfb sdbbbbbbbs sfbfdvdfs sfdbsdbd sfbsbggb sgbbsgbsdgb sbsgbsgbdbsdb sbsbbs sbd sbsdb dsbdsbbdbdb sdbbdb sdbgdbdbg sbdgbgbbbbbbbbbbbbbbbbbbbbbbb sbgddddddd sdgbbb sbgdddddddddddddd dddddddd ddd d d ddddd ddddddddddddddddddd !</p>
-                    <p class="comment-date">12-11-2021 20:20</p>
-                </div>
-                <div class="some-comment" id="2">
                     <p class="username"><span>Username:</span>NameOne</p>
                     <p class="comment-descr">Gdvsvnsoui svnjsvosvn svnsovnosv svnsovnisvn svnosivnsoivnsov sdvsv svsvinonvsd vsdnoidsfv dfbvdsf dsfbsdb sdfb sdbbbbbbbs sfbfdvdfs sfdbsdbd sfbsbggb sgbbsgbsdgb sbsgbsgbdbsdb sbsbbs sbd sbsdb dsbdsbbdbdb sdbbdb sdbgdbdbg sbdgbgbbbbbbbbbbbbbbbbbbbbbbb sbgddddddd sdgbbb sbgdddddddddddddd dddddddd ddd d d ddddd ddddddddddddddddddd !</p>
                     <p class="comment-date">12-11-2021 20:20</p>
