--- a/frontend/form.html
+++ b/frontend/form.html
@@ -26,7 +26,7 @@
             </div>
             <div class="box signup">
                 <h2>Don`t Have an Account?</h2>
-                <button class="signupBtn">Sign Up</button>
+                <button class="signupBtn" onclick="toSignUp()">Sign Up</button>
             </div>
         </div>
         <div class="formBx">
