film_page_with_db_object

--- a/frontend/add_film.html
+++ b/frontend/add_film.html
@@ -31,15 +31,10 @@
                     <input type="text" placeholder="Rating" id="movie_rating">
                     <input type="text" placeholder="Vote count" id="movie_vote_count">
                     <input type="text" placeholder="Age limitation" id="movie_age_limitation">
-                    <select id="movie_year" required> 
+                    <select id="movie_year"> 
                         <option value="year">Select year</option>
-                        <option value="2021">2021</option>
-                        <option value="2020">2020</option>
-                        <option value="2019">2019</option>
-                        <option value="2018">2018</option>
-                        <option value="2017">2017</option>
                     </select> 
-                    <select id="movie_ganre" required> 
+                    <select id="movie_ganre"> 
                         <option value="ganre">Select ganre</option>
                     </select>
                     <input type="text" placeholder="Actors" id="movie_actors">
