--- a/frontend/film.html
+++ b/frontend/film.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="trailer-container">
-        <h1 class="heading">Video Clip</h1>
+        <h1 class="heading">Movie</h1>
     </div>
 
     <div class="rating-container">
