frontend_ganre_and_year_sort

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -19,7 +19,7 @@
 
     <div class="search_field">
         <form  id="form">
-            <input type="text" placeholder="Search" id="search" class="search">
+            <input type="text" name="searchBar" placeholder="Search" id="searchBar" class="searchBar">
         </form>
     </div>
 
@@ -31,7 +31,13 @@
         <a href="users_list.html" class="admin-link">All users page</a>
     </div>
 
-    <div id="tags"></div>
+    <div id="tags">
+        <div class="tag active" id="all_genre">All Genres</div>
+    </div>
+
+    <div id="yeartags">
+        <div class="tagYear active" id="all_years">All Years</div>
+    </div>
 
     <main id="main"></main>
 
