--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -58,7 +58,10 @@
                         <input type="password" placeholder="Confirm new password" id="c-new-password">
                         <input type="submit" value="Update password" id="update-password">
                     </form>
-                </div>   
+                </div> 
+                <div class="delete-account-box">
+                    <button class="delete-account-btn" onclick="toDeleteAccount()">Delete your account</button>
+                </div>  
             </div>
 
             <div class="subscription-info">
