frontend_profile_and_user_list

--- a/frontend/form.html
+++ b/frontend/form.html
@@ -22,7 +22,7 @@
         <div class="firstBg">
             <div class="box signin">
                 <h2>Already Have an Account?</h2>
-                <button class="signinBtn">Sign In</button>
+                <button class="signinBtn" onclick="toSignIn()">Sign In</button>
             </div>
             <div class="box signup">
                 <h2>Don`t Have an Account?</h2>
