frontend_connection_with_token

--- a/frontend/add_film.html
+++ b/frontend/add_film.html
@@ -10,14 +10,7 @@
 
 </head>
 <body>
-    <nav class="navbar">
-        <img src="img/logo.png" class="logo" alt="">
-        <div class="join-box">
-            <p class="join-msg">Watch movies without limits</p>
-            <button class="btn join-btn">Join now</button>
-            <button class="btn">Sign in</button>
-        </div>
-    </nav>
+    <nav class="navbar"></nav>
 
     <div class="add-container">
         <div class="add-panel">
@@ -46,6 +39,7 @@
     </div>
 
     <script src="js/api.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/home.js"></script>
     <script src="js/add_film.js"></script>
     
