--- a/frontend/film.html
+++ b/frontend/film.html
@@ -12,14 +12,7 @@
 
 </head>
 <body>
-    <nav class="navbar">
-        <img src='https://i.postimg.cc/W4wxQkBb/logo.png' class="logo" alt='logo'/>
-        <div class="join-box">
-            <p class="join-msg">Watch movies without limits</p>
-            <button class="btn join-btn">Join now</button>
-            <button class="btn">Sign in</button>
-        </div>
-    </nav>
+    <nav class="navbar"></nav>
 
     <div class="movie-info">
         <div class="movie-detail">
@@ -69,7 +62,7 @@
         <h1 class="heading">Comments</h1>
         <div class="comments-container">
             <div class="add-comment">
-                <form onsubmit="return postComment(event)"> 
+                <form onsubmit="return postComment(event)" > 
                     <input type="text" placeholder="Write comment......." id="comment-text">
                     <input type="submit" value="Send comment">
                 </form>
