--- a/frontend/home.html
+++ b/frontend/home.html
@@ -8,14 +8,7 @@
 
 </head>
 <body>
-    <nav class="navbar">
-        <img src='https://i.postimg.cc/W4wxQkBb/logo.png' class="logo" alt='logo'/>
-        <div class="join-box">
-            <p class="join-msg">Watch movies without limits</p>
-            <button class="btn join-btn" onclick="goToSignUp('form.html')">Join now</button>
-            <button class="btn" onclick="goToSignUp('form.html')">Sign in</button>
-        </div>
-    </nav>
+    <nav class="navbar"></nav>
 
     <div class="search_field">
         <form  id="form">
@@ -51,6 +44,6 @@
     <script src="js/api.js"></script>
     <script src="js/home.js"></script>
     <script src="js/utils.js"></script>
-    <script src="js/form.js"></script>
+    <!-- <script src="js/form.js"></script> -->
 </body>
 </html>
