--- a/frontend/form.html
+++ b/frontend/form.html
@@ -9,14 +9,7 @@
 
 </head>
 <body>
-    <nav class="navbar">
-        <img src="img/logo.png" class="logo" alt="">
-        <div class="join-box">
-            <p class="join-msg">Watch movies without limits</p>
-            <button class="btn join-btn">Join now</button>
-            <button class="btn">Sign in</button>
-        </div>
-    </nav>
+    <nav class="navbar"></nav>
 
     <div class="container">
         <div class="firstBg">
@@ -40,13 +33,13 @@
             </div>
 
             <div class="form signupForm">
-                <form>
+                <form onsubmit="return toRegistrate(event)">
                     <h3>Sign Up</h3>
-                    <input type="text" placeholder="Username">
-                    <input type="email" placeholder="Email">
-                    <input type="tel" placeholder="Phone number">
-                    <input type="password" placeholder="Password">
-                    <input type="password" placeholder="Confirm password">
+                    <input type="text" placeholder="Username" id="username_signup">
+                    <input type="email" placeholder="Email" id="email_signup">
+                    <input type="tel" placeholder="Phone number" id="phone_signup">
+                    <input type="password" placeholder="Password" id="password_signup">
+                    <input type="password" placeholder="Confirm password" id="cpassword_signup">
                     <input type="submit" value="Registration">
                 </form>
             </div>
@@ -54,7 +47,8 @@
     </div>
 
     <script src="js/api.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/utils.js"></script>
+    <!-- <script src="js/home.js"></script> -->
     <script src="js/form.js"></script>
 
 </body>
