--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -87,7 +87,8 @@
     </div>
 
     <script src="js/api.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/utils.js"></script>
+    <!-- <script src="js/home.js"></script> -->
     <script src="js/form.js"></script>
     <script src="js/profile.js"></script>
 
