--- a/frontend/users_list.html
+++ b/frontend/users_list.html
@@ -11,14 +11,7 @@
 
 </head>
 <body>
-    <nav class="navbar">
-        <img src="img/logo.png" class="logo" alt="">
-        <div class="join-box">
-            <p class="join-msg">Watch movies without limits</p>
-            <button class="btn join-btn">Join now</button>
-            <button class="btn">Sign in</button>
-        </div>
-    </nav>
+    <nav class="navbar"></nav>
 
     <div class="user-container">
         <div class="user-panel">
@@ -65,6 +58,7 @@
     </div>
 
     <script src="js/api.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/home.js"></script>
     <script src="js/user_list.js"></script>
     
