--- a/frontend/users_list.html
+++ b/frontend/users_list.html
@@ -26,31 +26,6 @@
 
                 <div class="user-table">
                     <table class="users-table">
-                        <thead>
-                            <tr>
-                                <th>User ID</th>
-                                <th>User name</th>
-                                <th>User email</th>
-                                <th>Current status</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody class="table-body">
-                            <tr>
-                                <td>1</td>
-                                <td>User1</td>
-                                <td>email1@gmail.com</td>
-                                <td>Blocked</td>
-                                <td><button class="user-action-btn">Unblock</button></td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>User2</td>
-                                <td>email2@gmail.com</td>
-                                <td>Active</td>
-                                <td><button class="user-action-btn">Block</button></td>
-                            </tr>
-                        </tbody>
                     </table>
                 </div>
             </div>
@@ -59,7 +34,7 @@
 
     <script src="js/api.js"></script>
     <script src="js/utils.js"></script>
-    <script src="js/home.js"></script>
+    <!-- <script src="js/home.js"></script> -->
     <script src="js/user_list.js"></script>
     
 </body>
