--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -10,14 +10,7 @@
 
 </head>
 <body>
-    <nav class="navbar">
-        <img src="img/logo.png" class="logo" alt="">
-        <div class="join-box">
-            <p class="join-msg">Watch movies without limits</p>
-            <button class="btn join-btn">Join now</button>
-            <button class="btn">Sign in</button>
-        </div>
-    </nav>
+    <nav class="navbar"></nav>
 
     <div class="profile-container">
         <div class="profile-panel">
@@ -89,7 +82,7 @@
     <script src="js/api.js"></script>
     <script src="js/utils.js"></script>
     <!-- <script src="js/home.js"></script> -->
-    <script src="js/form.js"></script>
+    <!-- <script src="js/form.js"></script> -->
     <script src="js/profile.js"></script>
 
 </body>
