--- a/frontend/home.html
+++ b/frontend/home.html
@@ -17,11 +17,11 @@
     </div>
 
     <div id="add_film">
-        <a href="add_film.html" class="admin-link">Add new film</a>
+        <a href="add_film.html" class="add-f admin-link">Add new film</a>
     </div>
 
     <div id="users_list">
-        <a href="users_list.html" class="admin-link">All users page</a>
+        <a href="users_list.html" class="u-list admin-link">All users page</a>
     </div>
 
     <div id="tags">
@@ -44,6 +44,5 @@
     <script src="js/api.js"></script>
     <script src="js/home.js"></script>
     <script src="js/utils.js"></script>
-    <!-- <script src="js/form.js"></script> -->
 </body>
 </html>
